Updated syntax